--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.29.2",
     "axios": "^1.6.8",
     "i": "^0.3.7",
+    "lodash": "^4.17.21",
     "npm": "^10.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +21,7 @@
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
