--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/ioredis": "^5.0.0",
+    "@types/lodash": "^4.17.1",
     "@types/node": "^20.12.6",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
@@ -30,6 +31,7 @@
     "http-errors": "^2.0.0",
     "ioredis": "^5.3.2",
     "ioredis-rejson": "^1.0.10",
+    "lodash": "^4.17.21",
     "redis": "^4.6.13",
     "socket.io": "^4.7.5"
   }
