--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "concurrently \"nodemon src/index.ts\" \"npm run dev --prefix client\"",
     "dev-server": "nodemon src/index.ts",
-    "build": "tsc"
+    "build": "tsc && npm run build --prefix client && mkdir -p dist/client && cp -r client/dist dist/client",
+    "start": "NODE_ENV=production node dist/index.js",
+    "deploy": "npm install && npm install --prefix client && npm run build"
   },
   "author": "Subhajit Das",
   "license": "ISC",
