--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REDIS_URL=rediss://default:d8b7211d762843268cc83b82c4c2e73f@apn1-notable-ladybug-33115.upstash.io:33115
 PORT=3000
+ROOM_EXPIRATION=600
